[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["complexint"]

[project]
name = "complexint"
version = "0.0.2"
authors = [
  { name="Ryan Heard", email="ryanwheard@gmail.com" },
]
description = "A complexint class, for using large complex numbers which exceed the precision offered by the builtin complex which uses doubles."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["complex", "math"]

[project.urls]
Repository = "https://github.com/rheard/complexint"


