[build-system]
requires = [
    "setuptools >= 77.0.3",
    "mypy[mypyc]",
    "auditwheel",
    "cibuildwheel==1.8.0",
]

[project]
name = "complexint"
version = "0.0.2"
authors = [
  { name="Ryan Heard", email="ryanwheard@gmail.com" },
]
description = "A complexint class, for using large complex numbers which exceed the precision offered by the builtin complex which uses doubles."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["complex", "math"]

[project.urls]
Repository = "https://github.com/rheard/complexint"

[tool.cibuildwheel]
build = "cp3{8,9,10,11,12,13}-{win,macosx,manylinux}*"
